# rust_power_manager

./: .gitignore  Cargo.toml
src/: battery_auto_mode.rs  main.rs  powerplans.rs  rust_power_error.rs
