[package]
name = "rust_power_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.4.0"
hex = "0.4.3"
uuid = "1.8.0"
winapi = {version = "0.3.9", features = ["winbase","impl-default", "impl-debug", "powersetting", "combaseapi"] }

